--- a/src/styles/markdown.scss
+++ b/src/styles/markdown.scss
@@ -47,4 +47,8 @@
     font-family: "Fira Code", "Fira Mono", ui-monospace, SFMono-Regular, Menlo,
       Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   }
+
+  pre {
+    overflow-x: scroll;
+  }
 }
